--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://rawrstudiogh.github.io/propela"
+baseURL = "https://rawrstudiogh.github.io/"
 languageCode = "en-us"
 title = "Propela"
 
