Update hugo.toml header nav to hidden

--- a/hugo.toml
+++ b/hugo.toml
@@ -72,6 +72,7 @@ paginatePath = "page"
     
     # Menu configuration
     [params.header.menu]
+      visible = false
       spacing = "space-x-8"
       
       # Dropdown menu configuration
